# hekate

./: README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/hekate/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
hekated/: Cargo.toml
hekated/src/: main.rs  system.rs  websocket.rs
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: host.dart  main.dart
lib/hostView/: hostView.dart
linux/: CMakeLists.txt  my_application.cc
test/: widget_test.dart
