[package]
name = "hekated"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix              = { version = "0.10.0" }
actix-http         = { version = "2.2.0" }
actix-web-actors   = { version = "3.0.0" }
actix-web-httpauth = { version = "0.5.1" }
actix-web          = { version = "3.3.2", features = ["rustls"] }
pretty_env_logger  = "0.4.0"
serde              = "1.0.126"
serde_json         = "1.0.64"
